--- a/readme
+++ b/readme
@@ -1,7 +1,6 @@
-1. there are 5 files according to questions in the assignment-2 document (q1,q2,q3,q4).py and for question 5, Autoencoder.py
+1. there are 4 files according to questions in the assignment-2 document (q1,q2,q3-k-means,q4-k-means_with_PCA).py
 2. Python environment:Python 3.7.3
-3. Output file name for Question 3: result_q3.txt
-   Output file name for Question 4: result_q4.txt
+
 
 Need following libraries to run the code:
 
