--- a/readme
+++ b/readme
@@ -1,3 +1,7 @@
+Data mining tasks on WaterTreatment Dataset
+
+
+
 1. there are 4 files according to questions in the assignment-2 document (q1,q2,q3-k-means,q4-k-means_with_PCA).py
 2. Python environment:Python 3.7.3
 
